src/styles/mixins/btn.scss
@mixin btn($height: 56px) {
  border: none;
  border-radius: 8px;
  display: inline-block;
  cursor: pointer;
  height: $height;
  text-align: center;
  opacity: 0.5;
  line-height: $height;
  font-size: 24px;
  background: var(--btn-bg);
  text-transform: lowercase;
  box-sizing: border-box;

  &:hover {
    opacity: 1;
  }
}

@mixin btnIco($height: 56px) {
  @include btn($height);
  width: $height;
}


@mixin btnTxt() {
  @include btn;
  padding: 0 16px;
  font-weight: 300;

}

